Fix some rendering issues on smaller screens

--- a/app/assets/stylesheets/components/jumbotron.css.scss
+++ b/app/assets/stylesheets/components/jumbotron.css.scss
@@ -43,7 +43,7 @@
   form {
     margin-top: 20px;
     background-color: rgba(0, 0, 0, 0.5);
-    padding: 50px 25px;
+    padding: 50px 15px;
     border-radius: 10px;
 
     p {
